# HardQode_task

./: .gitignore  pyproject.toml
task/: forms.py  mixins.py  settings.py  urls.py  views.py
task/groups/: apps.py  models.py
task/groups/migrations/: 0001_initial.py  0002_initial.py  0003_initial.py  0004_alter_group_product_alter_group_users.py
task/lessons/: apps.py  models.py
task/lessons/migrations/: 0001_initial.py  0002_alter_lesson_name_alter_lesson_product_and_more.py
task/products/: apps.py  models.py  urls.py  views.py
task/products/migrations/: 0001_initial.py  0002_initial.py  0003_delete_lessons.py
task/templates/: base.html  detail.html  index.html  login.html  register.html
task/users/: admin.py  apps.py
task/users/migrations/: 0001_initial.py
