[tool.poetry]
name = "task-code"
version = "0.1.0"
description = ""
authors = ["kalldrek777 <kalldrek@yandex.ru>"]
readme = "README.md"
packages = [{include = "task"}]


[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.2"
django-bootstrap5 = "^23.4"
flake8 = "^7.0.0"
django-rest = "^0.8.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
